# hackbelfast-14

./: .gitignore  README.md  README_BACKUP_50775.md  README_LOCAL_50775.md  index.html  package-lock.json  package.json
backend/: .gitignore  .solana_backend_keypair.json  botanic.db  dashboard.py  main.py  pyproject.toml
backend/api/: schemas.py
backend/datasets/: LightingFaultsCurrentYear.csv  anti-social-behaviour-monthly-data.csv  belfast-bike-stations-updated-25-june-2021.csv  foursquare_hours_cache.json  foursquare_hours_debug.json  foursquare_pois_belfast.json  osm_pois_belfast.json
backend/db/: database.py  models.py
backend/maps/: loader.py
backend/maps/raw/: queens-bfs-streets.geojson
backend/maps/seed/: botanic-streets.seed.geojson
backend/scratch/: add_docs.py  add_venues_endpoint.py  botanic_breakdown.py  consolidate_venues.py  debug_geo.py  expand_osm.py  find_best_street.py  find_best_street2.py  fix_dashboard.py  fix_engine.py  fix_hours.py  investigate_crescent.py  load_osm.py  reorder_engine.py  replace_sanctuary.py  test_amenity_scoring.py  test_db_scoring.py  test_scores.py  test_scores_coord.py  test_time_scoring.py  update_crimes.py  update_db.py  update_engine.py  update_fsq_json.py
backend/scripts/: foursquare_os_places_smoke.py  ingest_foursquare_pois.py  ingest_osm_pois.py  migrate_to_db.py  populate_db.py  process_map_data.py
backend/services/: ed25519_wrapper.py  environment_scoring.py  geo.py  pathfinding_service.py  police_data_scoring.py  safety_engine.py  solana_service.py
backend/services/amenities/: amenity_scoring.py
(+25 files in other folders)
